--- a/mice-enc-SubEmoMemScore-variance.Rmd
+++ b/mice-enc-SubEmoMemScore-variance.Rmd
@@ -2,9 +2,82 @@
 title: "MICE Encoding SubEmoMemScore Variance"
 author: Kyle Kurkela
 date: '`r Sys.Date()`'
-output: html_notebook
+output: 
+  html_notebook:
+    code_folding: show
+    theme: cosmo
+    toc: yes
+    toc_float: true
 ---
 
-```{r}
+```{r setup, message=FALSE, echo=FALSE}
+library('tidyverse')
+```
+
+# Read in Data
+
+Recursively read in the encoding `task-encoding*.tsv` files from `~/sourcedata/`, excluding that one run from that one subject that has two noise columns for some reason...
+
+```{r load, warning=FALSE, message=FALSE}
+
+datapath    <- '~/Desktop/sourcedata/'
+datafiles   <- list.files(datapath,pattern='.*task-encoding.*\\.tsv$',full.names=TRUE,recursive=TRUE)
+numCols     <- lapply(lapply(datafiles,read.delim), ncol)
+numColsFilt <- numCols == 17
+datafiles   <- datafiles[numColsFilt]
+df          <- do.call(rbind, lapply(datafiles,read.delim))
 
 ```
+
+Add a `subject` and `run` column to the data by extracting this information from the `datafiles` names
+
+```{r add_subjectID_column}
+
+matches      <- regexpr("sub-s[0-9]{3}", datafiles)
+subjectIDs   <- regmatches(datafiles, matches)
+
+matches      <- regexpr("run-[0-9]{2}", datafiles)
+runIDs       <- regmatches(datafiles, matches)
+
+df$subject   <- rep(subjectIDs, each = 32)
+df$run       <- rep(runIDs, each = 32)
+
+```
+
+# Tidy Up the Data
+
+Tidy up the data, making things factors that need to be factors, etc.
+
+```{r tidyup}
+df %>%
+  select(subject, run, Condition, SubsequentEmoMemoryResp, SubsequentEmoMemory, SubEmoMemScore) %>%
+  mutate(
+    Emotion                 = ifelse(grepl('neg', Condition), "Negative", 
+                                     ifelse(grepl('neu', Condition), "Neutral", NA)),
+    Emotion                 = factor(Emotion, levels = c("Negative", "Neutral")),
+    SubsequentEmoMemory     = as.logical(SubsequentEmoMemory),
+    SubEmoMemScore          = factor(SubEmoMemScore, levels = c("NaN", "1", "2", "3", "4")),
+    subject                 = factor(subject),
+    run                     = factor(run)
+  ) -> tidy.df
+```
+
+# Breakdown
+
+Lets Breakdown the variance in the SubEmoMemScore across `subject`s and `Emotion`s
+
+```{r}
+tidy.df %>%
+  ggplot(aes(x = subject, fill = SubEmoMemScore)) +
+  geom_bar(position = "stack", width = .8) +
+  facet_grid(~Emotion) +
+  theme(axis.text.x = element_blank()) +
+  xlab("Subjects") +
+  ylab("Trial Count") +
+  ggtitle("Subsequent Emotional Memory Score Variance", subtitle = "Among MICE fMRI Subjects") +
+  labs(caption = "NaN = Subsequent NRs\nRed Shades = Incorrect, Blue Shades = Correct") +
+  scale_fill_manual(values=c("#fecc5c", "#fd8d3c", "#e31a1c", "#a6bddb", "#2b8cbe"))
+```
+
+*Conclusion:*  
+It looks like there is NOT a lot of variance in the Subsequent Emotional Memory Score Parametric Modulator for many subjects...  
